# scripervisor

./: .gitignore  CONTEXT.md  README.md  claude.md  pyproject.toml
app/: agent.py  config.py  fast_api_app.py  tools.py  workflow.py
app/app_utils/: telemetry.py  typing.py
app/sub_agents/: __init__.py  front_desk.py  line_producer.py  post_production.py  script_continuity.py  storyboard.py
docs/: ARCHITECTURE.md  PROGRESS.md
docs/adr/: 0001-front-desk-no-planning-authority.md  0002-adopt-adk-2.0-workflow-graph.md
frontend/: app.js  index.html  styles.css
mcp_server/: __init__.py  mock_server.py
tests/unit/: test_tools.py  test_workflow.py
